# nnmd

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.md  cpu_log.out  example.txt  gpu_log.out  install_with_tests.sh  log.txt  main.py  net.drawio  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  symm_test.ipynb  test.py  tox.ini
.github/scripts/: cleanup.sh
.github/workflows/: ci-cd.yaml
docs/: conf.py  index.rst  modules.rst  nnmd.features.rst  nnmd.io.rst  nnmd.md.rst  nnmd.nn.rst  nnmd.nnmd_cpp.rst  nnmd.rst  nnmd.util.rst  requirements-docs.txt  requirements.txt  versions.yaml
docs/source/: bibliography.rst  conf.py  index.rst  introduction.rst  refs.bib
docs/source/_templates/: version.html
docs/source/api/: index.rst  nnmd.features.rst  nnmd.io.rst  nnmd.md.rst  nnmd.nn.rst  nnmd.rst
docs/source/basics/: index.rst  install.rst  tutorials.rst
docs/source/bpnn/: index.rst
mdnn/cpp_lib/: setup.py
mdnn/cpp_lib/include/: bind_src.h
mdnn/cpp_lib/src/: atomic_nn.cpp  binding.cpp  calculate_sf.cpp
mdnn/cpp_lib/tests/: test.py
mdnn/mdnn_cpp/: CMakeLists.txt
mdnn/mdnn_cpp/include/: calculate_forces.h
mdnn/mdnn_cpp/src/: binding.cpp  calculate_forces.cpp
mdnn/mdnn_cuda/: CMakeLists.txt  setup.py
mdnn/mdnn_cuda/include/: cuda_header.h
mdnn/mdnn_cuda/src/: binding.cpp  calculate_forces.cpp  calculate_sf.cu
mdnn/nn/: CMakeLists.txt  atomic_nn.cpp  atomic_nn.py  neural_network.py  setup.py  structure.py
mdnn/symm_func/: calculate_energy.cpp  calculate_forces.cpp  calculate_sf.cpp  replica_nn.cpp  setup.py  symm_func.cpp  symm_func.pyx  symm_test.ipynb  symmetric_functions.cpp  symmetric_functions.h  test.py
mdnn/symmetry_functions/: pair_g.py  sf.py  symm.py
mdnn/util/: decorators.py  gdf.py  params_parser.py  test.txt
nn/: neural_network.py
nnmd/: __init__.py
nnmd/_nnmd_cpp/: CMakeLists.txt
nnmd/_nnmd_cpp/cmake/: util.cmake
nnmd/_nnmd_cpp/nnmd_cpp/: __init__.py
nnmd/_nnmd_cpp/src/: binding.cpp
nnmd/_util/: _logger.py
nnmd/features/: __init__.py  auto_params.py  calculate_dg.py  calculate_g.py  calculate_sf.py  symm_funcs.py
nnmd/io/: __init__.py  ase.py  atomic_parser.py  gpaw.py  input_parser.py
nnmd/md/: __init__.py  calculator.py  verle.py  verlet.py
nnmd/nn/: __init__.py  _dataset.py  atomic_nn.py  bpnn.py  dataset.py  neural_network.py  train_val_test_split.py
nnmd/nnmd_cpp/: CMakeLists.txt  setup.py
nnmd/nnmd_cpp/include/: calculate_forces.h  head.hpp
nnmd/nnmd_cpp/include/cpu/: calculate_dG.hpp  calculate_forces.hpp  symmetric_functions.hpp
nnmd/nnmd_cpp/include/cuda/: calculate_dG.hpp  calculate_forces.hpp  calculate_gdf.hpp  cuda_header.hpp  symmetric_functions.hpp
nnmd/nnmd_cpp/include/symm_func/: symmetric_functions.h
nnmd/nnmd_cpp/include/torch/: calculate_sf.hpp
nnmd/nnmd_cpp/nnmd_cpp/: __init__.py
nnmd/nnmd_cpp/src/: binding.cpp  calculate_forces.cpp  cpu_extension.cpp  cuda_extention.cpp  torch_extension.cpp
nnmd/nnmd_cpp/src/cpu/: calculate_dG.cpp  calculate_forces.cpp
nnmd/nnmd_cpp/src/cpu/symm_func/: calculate_sf.cpp  symmetric_functions.cpp
nnmd/nnmd_cpp/src/cuda/: calculate_dG.cpp  calculate_forces.cpp  calculate_gdf.cpp  calculate_sf.cu
nnmd/nnmd_cpp/src/symm_func/: calculate_sf.cpp  symmetric_functions.cpp
nnmd/nnmd_cpp/src/torch/: calculate_sf.cpp
nnmd/nnmd_cpp/tests/: test_import.py
nnmd/nnmd_cuda/: CMakeLists.txt  setup.py
nnmd/nnmd_cuda/include/: calculate_forces.h  head.h
nnmd/nnmd_cuda/src/: binding.cpp  calculate_forces.cpp  calculate_sf.cu
nnmd/util/: __init__.py  _logger.py  atomic_parser.py  calculate_dg.py  calculate_g.py  decorators.py  gpaw_parser.py  input_parser.py  params_parser.py  parser.py  train_val_test_split.py
samples/: main.py
samples/cu111/: dg_Ag.pt  g_Ag.pt  g_Cu.pt  md_simulation.py  plot_energies.py  plot_errors.py  test_g.py  test_gpaw_parser.py  train.py
samples/cu111/checkpoint/: atomic_nn_Cu.pt
samples/cu111/input/: ag.txt  cu111.txt  input.yaml  symm_ag.json  symm_cu111.json
samples/cu111/models_adamw/: atomic_nn_Cu.pt
samples/gpaw/: Cu111.txt  cu111.txt
samples/gpaw_simulation/: main.py  run.sh  test_on_180.py  train.py
samples/gpaw_simulation/models/: atomic_nn_0.pt  atomic_nn_1.pt  atomic_nn_10.pt  atomic_nn_11.pt  atomic_nn_12.pt  atomic_nn_13.pt  atomic_nn_14.pt  atomic_nn_15.pt  atomic_nn_16.pt  atomic_nn_17.pt  atomic_nn_18.pt  atomic_nn_19.pt  atomic_nn_2.pt  atomic_nn_20.pt  atomic_nn_21.pt  atomic_nn_22.pt  atomic_nn_23.pt  atomic_nn_24.pt  atomic_nn_25.pt  atomic_nn_26.pt  atomic_nn_27.pt  atomic_nn_28.pt  atomic_nn_29.pt  atomic_nn_3.pt  atomic_nn_30.pt  atomic_nn_31.pt  atomic_nn_32.pt  atomic_nn_33.pt  atomic_nn_34.pt  atomic_nn_35.pt  atomic_nn_36.pt  atomic_nn_37.pt  atomic_nn_38.pt  atomic_nn_39.pt  atomic_nn_4.pt  atomic_nn_40.pt  atomic_nn_41.pt  atomic_nn_42.pt  atomic_nn_43.pt  atomic_nn_44.pt  (+5 more)
samples/gpaw_simulation/models_new/: atomic_nn.pt
samples/lennard-jones/: dg_H.pt  g_H.pt  gen.py  gen_dimer.py  gen_trimer.py  lennard_jones.py  main.py  plot_energies.py  plot_errors.py  run.sh  train.py
samples/lennard-jones/checkpoint/: atomic_nn_Li.pth
samples/lennard-jones/input/: input.yaml  lennard_jones.traj  symm_lj.yaml
samples/lennard-jones/lennard_jones/: __init__.py
samples/lennard-jones/models/: atomic_nn_0.pt  atomic_nn_1.pt  atomic_nn_Li.pth
samples/li/: Test_md_Li_27.traj  analysis.ipynb  analysis.py  cartesians_history.npy.npz  checkpoint.pt  dg.pt  energies_actual.npy.npz  forces_history.npy.npz  g.pt  md_simulation.py  models_Li  plot_energies.py  plot_errors.py  test.py  train.py  try_g.py  velocities_history.npy.npz
samples/li/checkpoint/: atomic_nn_Li.pth
samples/md/: cartesians_actual.npy.npz  cartesians_history.npy.npz  forces_history.npy.npz  get_info.py  md_simulation.py  md_visualization.ipynb  velocities_history.npy.npz
samples/symm_funcs_plots/: plot.py
symmetry_functions/: cutoff.py  sf.py  symm.py
test/: atomic_nn.ipynb  symm_test.ipynb  test_import.py
tests/: test_import.py
tests/samples/: cpu_log.out
(+47 files in other folders)
