[project]
name = "nnmd"
version = "0.2.0-dev"
description = "ML library for molecular dynamics simulations"
readme = "README.md"
keywords = ["python", "pytorch", "machine learning", "molecular dynamics"]
license = {text = "MIT"}
authors = [
    {name = "Andrey Budnikov"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/ded-otshelnik/nnmd"
Repository = "https://github.com/ded-otshelnik/nnmd.git"

[build-system]
requires = ["setuptools",
            "ase",
            "numpy",
            "torch",
            "tqdm",
            "pyyaml"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox",
    "tox-current-env",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "mypy",
    "flake8",
    "black",
]
